--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -6,6 +6,8 @@
     <title>PreguntasJGM</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style/app.css') }}">
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
+    <script src="{{ url_for('static', filename='js/jquery-3.1.0.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     {% block head %}{% endblock %}
   </head>
   <body>
