--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -11,6 +11,6 @@
     {% block head %}{% endblock %}
   </head>
   <body>
-    {% block content %}{% endblock %}
+    {% block main %}{% endblock %}
   </body>
 </html>
