--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -11,6 +11,7 @@
     {% block head %}{% endblock %}
   </head>
   <body>
+    {% include 'header.html' %}
     {% block main %}{% endblock %}
   </body>
 </html>
