Font awesome agregado

--- a/server/app/static/style/app.scss
+++ b/server/app/static/style/app.scss
@@ -2,6 +2,7 @@
 // sass --watch app.scss:app.css
 
 @import 'fonts';
+@import 'libs/fontawesome/font-awesome';
 @import 'libs/bootstrap.min.css';
 @import 'libs/poncho.css';
 
