Tarjetas en la home

--- a/server/app/templates/home.html
+++ b/server/app/templates/home.html
@@ -11,4 +11,76 @@
             </div>
         </div>
     </section>
+
+    <section class="container-fluid">
+        <div class="row panels-row">
+
+            <div class="col-xs-12 col-sm-6">
+                <a class="panel panel-default" href="/preguntas">
+                    <div class="panel-body">
+                        <div class="media">
+                            <div class="media-left padding-20">
+                                <i class="fa fa-list-alt fa-fw fa-3x text-primary"></i>
+                            </div>
+                            <div class="media-body">
+                                <h3>Preguntas a jefatura</h3>
+                                <p class="text-muted">Busqueda y navegación de las preguntas que el Congreso realizó a
+                                    Jefatura</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+                <a class="panel panel-default" href="/informes">
+                    <div class="panel-body">
+                        <div class="media">
+                            <div class="media-left padding-20">
+                                <i class="fa fa-paperclip fa-fw fa-3x text-primary"></i>
+                            </div>
+                            <div class="media-body">
+                                <h3>Informes de gestion</h3>
+                                <p class="text-muted">Navegación según los informes presentados ante el Congreso</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+                <a class="panel panel-default" href="/carga">
+                    <div class="panel-body">
+                        <div class="media">
+                            <div class="media-left padding-20">
+                                <i class="fa fa-edit fa-fw fa-3x text-primary"></i>
+                            </div>
+                            <div class="media-body">
+                                <h3>Carga de preguntas</h3>
+                                <p class="text-muted">Alta manual o masiva de preguntas</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+                <a class="panel panel-default" href="/usuarios">
+                    <div class="panel-body">
+                        <div class="media">
+                            <div class="media-left padding-20">
+                                <i class="fa fa-users fa-fw fa-3x text-primary"></i>
+                            </div>
+                            <div class="media-body">
+                                <h3>Usuarios</h3>
+                                <p class="text-muted">Alta, baja y administración de usuarios y permisos del sistema</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+        </div>
+    </section>
 {% endblock %}
