--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -10,8 +10,10 @@
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     {% block head %}{% endblock %}
   </head>
-  <body>
+  <body class="{% block body_class %}{% endblock %}">
     {% include 'header.html' %}
-    {% block main %}{% endblock %}
+    <div class="main">
+        {% block main %}{% endblock %}
+    </div>
   </body>
 </html>
