--- a/server/app/templates/forms/_formhelpers.html
+++ b/server/app/templates/forms/_formhelpers.html
@@ -1,6 +1,6 @@
-{% macro render_field(field) %}
-    <dt>{{ field.label }}
-    <dd>{{ field(**kwargs)|safe }}
+{% macro render_field(field, class='col-xs-12') %}
+    <div class="{{ class }}">
+        {{ field(class_='form-control')|safe }}
         {% if field.errors %}
             <ul class=errors>
                 {% for error in field.errors %}
@@ -8,5 +8,11 @@
                 {% endfor %}
             </ul>
         {% endif %}
-    </dd>
+    </div>
+{% endmacro %}
+
+{% macro render_label(field, class='col-xs-12') %}
+    <div class="{{ class }}">
+        {{ field.label(class_='control-label') }}
+    </div>
 {% endmacro %}
