--- a/server/app/templates/forms/question_form.html
+++ b/server/app/templates/forms/question_form.html
@@ -1,13 +1,32 @@
 {% extends 'base.html' %}
-{% from "forms/_formhelpers.html" import render_field %}
+
+{% from "forms/_formhelpers.html" import render_field, render_label %}
 
 {% block main %}
-    <form method=post action="/carga">
-        <dl>
-            {{ render_field(form.number) }}
-            {{ render_field(form.body) }}
-            {{ render_field(form.justification) }}
-        </dl>
-        <p><input type=submit value=Register>
-    </form>
+    <div class="container-fluid">
+        <form method=post action="/carga" class="col-md-6 col-md-offset-3">
+            <h1>Carga de preguntas</h1>
+            <div class="form-group row">
+                {{ render_label(form.number) }}
+                {{ render_field(form.number) }}
+            </div>
+
+            <div class="form-group row">
+                {{ render_label(form.body) }}
+                {{ render_field(form.body) }}
+            </div>
+
+            <div class="form-group row">
+                {{ render_label(form.justification) }}
+                {{ render_field(form.justification) }}
+            </div>
+
+            <div class="form-group row">
+                {{ render_label(form.context) }}
+                {{ render_field(form.context) }}
+            </div>
+
+            <input type=submit value=Register class="btn btn-success">
+        </form>
+    </div>
 {% endblock %}
