--- a/server/app/static/style/app.scss
+++ b/server/app/static/style/app.scss
@@ -10,3 +10,10 @@
 .container-fluid {
   max-width: 1170px;
 }
+
+.form-tab {
+  background: white;
+  padding: 10px;
+  border: solid 1px #dddddd;
+  border-top: none;
+}
