--- a/server/app/templates/home.html
+++ b/server/app/templates/home.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="col-xs-12 col-sm-6">
-                <a class="panel panel-default" href="/carga">
+                <a class="panel panel-default" href="{{ url_for('question_upload') }}">
                     <div class="panel-body">
                         <div class="media">
                             <div class="media-left padding-20">
