Test de carga de planilla a la db

--- a/server/app/templates/forms/process_spreadsheet.html
+++ b/server/app/templates/forms/process_spreadsheet.html
@@ -20,6 +20,58 @@
                 {{ process_spreadsheet_form.csrf_token }}
 
                 <div class="form-group row">
+                    <div class="col-xs-12">
+                        {{ process_spreadsheet_form.discard_first_row.label() }}
+                        {{ process_spreadsheet_form.discard_first_row() }}
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <div class="col-xs-12">
+                        {{ render_label(process_spreadsheet_form.number) }}
+                        {{ render_field(process_spreadsheet_form.number) }}
+                    </div>
+
+                    <div class="col-xs-12">
+                        {{ render_label(process_spreadsheet_form.report) }}
+                        {{ render_field(process_spreadsheet_form.report) }}
+                    </div>
+
+                    <div class="col-xs-12">
+                        {{ render_label(process_spreadsheet_form.body) }}
+                        {{ render_field(process_spreadsheet_form.body) }}
+                    </div>
+
+                    <div class="col-xs-12">
+                        {{ render_label(process_spreadsheet_form.author) }}
+                        {{ render_field(process_spreadsheet_form.author) }}
+                    </div>
+
+                    <div class="col-xs-12">
+                        {{ render_label(process_spreadsheet_form.justification) }}
+                        {{ render_field(process_spreadsheet_form.justification) }}
+                    </div>
+
+                    <div class="col-xs-12">
+                        {{ render_label(process_spreadsheet_form.context) }}
+                        {{ render_field(process_spreadsheet_form.context) }}
+                    </div>
+
+                    <div class="col-xs-12">
+                        {{ render_label(process_spreadsheet_form.topic) }}
+                        {{ render_field(process_spreadsheet_form.topic) }}
+                    </div>
+
+                    <div class="col-xs-12">
+                        {{ render_label(process_spreadsheet_form.subtopic) }}
+                        {{ render_field(process_spreadsheet_form.subtopic) }}
+                    </div>
+
+                    <div class="col-xs-12">
+                        {{ render_label(process_spreadsheet_form.answerer) }}
+                        {{ render_field(process_spreadsheet_form.answerer) }}
+                    </div>
+
                 </div>
                 <input type=submit value="Procesar" class="btn btn-success">
             </form>
