--- a/server/app/templates/search/filters.html
+++ b/server/app/templates/search/filters.html
@@ -1,6 +1,6 @@
 <section class="container-fluid" id="search_filters">
     <div class="row panels-row">
-        {% if query.text|length > 0 %}
+        {% if query.text and query.text|length > 0 %}
             <div class="col-xs-12 filter text-query">
                 <a class="panel panel-default" href="#">
                     <div class="panel-body">
