--- a/server/app/templates/question.html
+++ b/server/app/templates/question.html
@@ -8,7 +8,7 @@
             {% endwith %}
         </div>
     </section>
-    {% with result_list = similar_questions, results_name = 'preguntas similares' %}
+    {% with results = similar_results, results_name = 'preguntas similares' %}
         {% include 'search/results_list.html' %}
     {% endwith %}
 {% endblock %}
