--- a/server/app/templates/search/results_list.html
+++ b/server/app/templates/search/results_list.html
@@ -1,6 +1,9 @@
 <section class="container-fluid" id="search_results">
-    {% if result_list|length > 0 %}
-        <h2>Se encontraron {{ result_list|length }} {{ results_name }}</h2>
+    {% set result_list = results['result_list'] %}
+    {% set pagination = results['pagination'] %}
+
+    {% if pagination['total_results'] > 0 %}
+        <h2>Se encontraron {{ pagination['total_results'] }} {{ results_name }}</h2>
     {% else %}
         <h2>No se encontrar {{ results_name }}</h2>
     {% endif %}
@@ -10,25 +13,48 @@
         {% endfor %}
     </div>
 
-    <ul class="pagination">
-        <li>
-            <a href="#" aria-label="Previous">
-                <span aria-hidden="true">«</span>
-            </a>
-        </li>
-        <li class="active"><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">6</a></li>
-        <li><a href="#">7</a></li>
-        <li><a href="#">8</a></li>
-        <li><a href="#">9</a></li>
-        <li>
-            <a href="#" aria-label="Next">
-                <span aria-hidden="true">»</span>
-            </a>
-        </li>
-    </ul>
+    {% set query = results['query'] %}
+    {% if pagination['total_pages'] > 1 %}
+        <ul class="pagination">
+            {% if pagination['current_page'] > 2 %}
+                <li>
+                    <a href="{{ url_maker(query, page=1) }}">
+                        <span aria-hidden="true">«</span>
+                    </a>
+                </li>
+            {% endif %}
+            {% if pagination['current_page'] > 1 %}
+                <li>
+                    <a href="{{ url_maker(query, page=pagination['current_page'] - 1) }}">
+                        <span aria-hidden="true">‹</span>
+                    </a>
+                </li>
+            {% endif %}
+
+            {% set from_page = pagination['current_page'] - 3 if pagination['current_page'] - 3 > 1 else 1 %}
+            {% set to_page = pagination['current_page'] + 3 if pagination['current_page'] + 3 < pagination['total_pages'] else pagination['total_pages'] %}
+            {% for n in range(from_page, to_page + 1) %}
+                <li class="{{ 'active' if pagination['current_page'] == n else '' }}">
+                    <a href="{{ url_maker(query, page=n) }}">
+                        {{ n }}
+                    </a>
+                </li>
+            {% endfor %}
+
+            {% if pagination['current_page'] < pagination['total_pages'] %}
+                <li>
+                    <a href="{{ url_maker(query, page=pagination['current_page'] + 1) }}">
+                        <span aria-hidden="true">›</span>
+                    </a>
+                </li>
+            {% endif %}
+            {% if pagination['current_page'] < pagination['total_pages'] - 1 %}
+                <li>
+                    <a href="{{ url_maker(query, page=pagination['total_pages']) }}">
+                        <span aria-hidden="true">»</span>
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    {% endif  %}
 </section>
